[gd_scene load_steps=57 format=3 uid="uid://xgwwcejvha1d"]

[ext_resource type="Script" path="res://enemy/amalgamation/thee_amalgamation.gd" id="1_q0tx4"]
[ext_resource type="PackedScene" uid="uid://yllbcpq24cl0" path="res://enemy/creep_enemy/creep_enemy.tscn" id="2_kbojl"]
[ext_resource type="Script" path="res://enemy/amalgamation/amalgamation_state_machine.gd" id="3_6vw41"]
[ext_resource type="Script" path="res://enemy/amalgamation/states/amalgamation_asleep_state.gd" id="3_uo18w"]
[ext_resource type="Script" path="res://enemy/amalgamation/states/amalgamation_chewing_state.gd" id="4_f6qwh"]
[ext_resource type="Script" path="res://enemy/amalgamation/states/amalgamation_idle_state.gd" id="5_ul5i8"]
[ext_resource type="Script" path="res://enemy/amalgamation/states/amalgamation_pillars_state.gd" id="6_cos00"]
[ext_resource type="Script" path="res://enemy/amalgamation/states/amalgamation_spitting_state.gd" id="7_kvuo0"]
[ext_resource type="Script" path="res://enemy/amalgamation/states/amalgamation_sucking_state.gd" id="8_1g38x"]
[ext_resource type="Script" path="res://enemy/amalgamation/states/amalgamation_vulnerable_state.gd" id="9_0n3tp"]
[ext_resource type="Texture2D" uid="uid://b4nvtusva66p4" path="res://enemy/amalgamation/sprites/amalgamation_idlesheet.png" id="11_lkvvn"]
[ext_resource type="Shader" path="res://enemy/amalgamation/thee_amalgamation.gdshader" id="11_u1otb"]
[ext_resource type="Texture2D" uid="uid://mwj21nxk868f" path="res://enemy/amalgamation/sprites/amalgamation_spitattacksheet.png" id="12_jtu2h"]
[ext_resource type="Texture2D" uid="uid://ch0ffb24imgwb" path="res://enemy/amalgamation/sprites/amalgamation_pillarattacksheet.png" id="12_kvwdi"]
[ext_resource type="Texture2D" uid="uid://h7pgcds200vs" path="res://enemy/amalgamation/sprites/amalgamation_suckattacksheet.png" id="13_11tj7"]
[ext_resource type="Texture2D" uid="uid://boqdlxhg4nnot" path="res://enemy/amalgamation/sprites/sleeping_particle.png" id="15_ecvnk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vl62w"]
shader = ExtResource("11_u1otb")
shader_parameter/enabled = false

[sub_resource type="AtlasTexture" id="AtlasTexture_hk3vt"]
atlas = ExtResource("11_lkvvn")
region = Rect2(0, 60, 1120, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw2mr"]
atlas = ExtResource("11_lkvvn")
region = Rect2(1120, 60, 1120, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh27b"]
atlas = ExtResource("11_lkvvn")
region = Rect2(0, 1020, 1120, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_enchh"]
atlas = ExtResource("11_lkvvn")
region = Rect2(1120, 1020, 1120, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7k6n"]
atlas = ExtResource("11_lkvvn")
region = Rect2(0, 1980, 1120, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfyjs"]
atlas = ExtResource("11_lkvvn")
region = Rect2(1120, 1980, 1120, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uie0"]
atlas = ExtResource("12_kvwdi")
region = Rect2(0, 0, 1002, 908)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8g6"]
atlas = ExtResource("12_kvwdi")
region = Rect2(1002, 0, 1002, 908)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5il1"]
atlas = ExtResource("12_kvwdi")
region = Rect2(2004, 0, 1002, 908)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwi6e"]
atlas = ExtResource("12_kvwdi")
region = Rect2(0, 908, 1002, 908)

[sub_resource type="AtlasTexture" id="AtlasTexture_or4bg"]
atlas = ExtResource("12_kvwdi")
region = Rect2(1002, 908, 1002, 908)

[sub_resource type="AtlasTexture" id="AtlasTexture_usvja"]
atlas = ExtResource("12_kvwdi")
region = Rect2(0, 908, 1002, 908)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofdyj"]
atlas = ExtResource("12_kvwdi")
region = Rect2(1002, 908, 1002, 908)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo4ha"]
atlas = ExtResource("13_11tj7")
region = Rect2(1191, 72, 1191, 963)

[sub_resource type="AtlasTexture" id="AtlasTexture_17aj1"]
atlas = ExtResource("12_jtu2h")
region = Rect2(0, 50, 1120, 968)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwged"]
atlas = ExtResource("12_jtu2h")
region = Rect2(1120, 50, 1120, 968)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm688"]
atlas = ExtResource("12_jtu2h")
region = Rect2(0, 1018, 1120, 968)

[sub_resource type="AtlasTexture" id="AtlasTexture_uobu2"]
atlas = ExtResource("12_jtu2h")
region = Rect2(1120, 1018, 1120, 968)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdkyk"]
atlas = ExtResource("13_11tj7")
region = Rect2(0, 72, 1191, 963)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv25n"]
atlas = ExtResource("13_11tj7")
region = Rect2(0, 1035, 1191, 963)

[sub_resource type="AtlasTexture" id="AtlasTexture_qta1p"]
atlas = ExtResource("13_11tj7")
region = Rect2(1191, 1035, 1191, 963)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0ev6"]
atlas = ExtResource("13_11tj7")
region = Rect2(0, 1998, 1191, 963)

[sub_resource type="SpriteFrames" id="SpriteFrames_8wix2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk3vt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw2mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh27b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enchh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7k6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfyjs")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uie0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk8g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5il1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwi6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or4bg")
}],
"loop": false,
"name": &"pillar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_usvja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofdyj")
}],
"loop": true,
"name": &"pillar_loop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo4ha")
}],
"loop": true,
"name": &"sleeping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_17aj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwged")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm688")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uobu2")
}],
"loop": false,
"name": &"spit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdkyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo4ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv25n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qta1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0ev6")
}],
"loop": false,
"name": &"suck",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qta1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0ev6")
}],
"loop": true,
"name": &"suck_loop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk3vt")
}],
"loop": true,
"name": &"vuln",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_xqh8c"]
offsets = PackedFloat32Array(0.00502513, 0.165829, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_tq8je"]
radius = 66.0076

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fcu4u"]
size = Vector2(75.7506, 49.5625)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vau65"]
size = Vector2(78, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_roexs"]

[sub_resource type="Gradient" id="Gradient_rareu"]
offsets = PackedFloat32Array(0.0901408, 1)
colors = PackedColorArray(0.85, 0.85, 0.85, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_60t48"]
resource_name = "Chewing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_2kpdb"]
resource_name = "Hurt"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(10, 10, 10, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hgvlx"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_ofwbp"]
resource_name = "Pillars"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"pillar"]
}

[sub_resource type="Animation" id="Animation_41q6o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ayfy6"]
resource_name = "Sleeping"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"sleeping"]
}

[sub_resource type="Animation" id="Animation_5fxhe"]
resource_name = "Spitting"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"spit"]
}

[sub_resource type="Animation" id="Animation_kqdja"]
resource_name = "Sucking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"suck"]
}

[sub_resource type="Animation" id="Animation_5hnde"]
resource_name = "Vulnerable"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tawbk"]
_data = {
"Chewing": SubResource("Animation_60t48"),
"Hurt": SubResource("Animation_2kpdb"),
"Idle": SubResource("Animation_hgvlx"),
"Pillars": SubResource("Animation_ofwbp"),
"RESET": SubResource("Animation_41q6o"),
"Sleeping": SubResource("Animation_ayfy6"),
"Spitting": SubResource("Animation_5fxhe"),
"Sucking": SubResource("Animation_kqdja"),
"Vulnerable": SubResource("Animation_5hnde")
}

[node name="Amalgamation" type="Node2D" node_paths=PackedStringArray("sucking_state", "pillar_state", "spit_state")]
scale = Vector2(18.4817, 18.4817)
script = ExtResource("1_q0tx4")
max_health = 10
sucking_state = NodePath("StateMachine/Sucking")
pillar_state = NodePath("StateMachine/Pillars")
spit_state = NodePath("StateMachine/Spitting")
pillar_count = 50
spitting_possible_enemies = Array[PackedScene]([ExtResource("2_kbojl")])
spitting_number = 4
pillar_state_duration = 7.5
spitting_state_duration = 10.0
sucking_state_duration = 12.0
idle_state_duration = 6.0
chewing_state_duration = 3.5
vulnerable_state_duration = 5.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_6vw41")
initial_state = NodePath("Asleep")

[node name="Asleep" type="Node" parent="StateMachine"]
script = ExtResource("3_uo18w")

[node name="Chewing" type="Node" parent="StateMachine"]
script = ExtResource("4_f6qwh")

[node name="Pillars" type="Node" parent="StateMachine"]
script = ExtResource("6_cos00")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_ul5i8")

[node name="Spitting" type="Node" parent="StateMachine"]
script = ExtResource("7_kvuo0")

[node name="Sucking" type="Node" parent="StateMachine"]
script = ExtResource("8_1g38x")

[node name="Vulnerable" type="Node" parent="StateMachine"]
script = ExtResource("9_0n3tp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_vl62w")
scale = Vector2(0.07, 0.07)
sprite_frames = SubResource("SpriteFrames_8wix2")
animation = &"sleeping"
autoplay = "sleeping"

[node name="SleepingParticles" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(4.2745, -4.65325)
amount = 3
lifetime = 2.0
texture = ExtResource("15_ecvnk")
direction = Vector2(1.575, -1.07)
spread = 12.8
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
color_ramp = SubResource("Gradient_xqh8c")

[node name="SuckingArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 4
collision_mask = 134

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuckingArea"]
shape = SubResource("CircleShape2D_tq8je")
debug_color = Color(0.757734, 0.454117, 1.34766e-06, 0.42)

[node name="HitboxArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
shape = SubResource("RectangleShape2D_fcu4u")

[node name="VulnerableHurtArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 4
collision_mask = 130

[node name="CollisionShape2D" type="CollisionShape2D" parent="VulnerableHurtArea"]
shape = SubResource("RectangleShape2D_vau65")
debug_color = Color(0.957987, 0, 0.529598, 0.42)

[node name="MouthArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, 6)
collision_layer = 4
collision_mask = 130

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouthArea"]
shape = SubResource("CircleShape2D_roexs")
debug_color = Color(0, 0.613978, 0.600604, 0.658824)

[node name="SuckingEffect" type="CPUParticles2D" parent="."]
position = Vector2(0, 6)
emitting = false
amount = 150
lifetime = 1.5
local_coords = true
emission_shape = 2
emission_sphere_radius = 66.01
gravity = Vector2(0, 0)
angular_velocity_min = -720.0
angular_velocity_max = 720.0
radial_accel_min = -12.0
radial_accel_max = -10.0
scale_amount_min = 0.5
scale_amount_max = 1.5
color_ramp = SubResource("Gradient_rareu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tawbk")
}

[connection signal="body_entered" from="HitboxArea" to="." method="_on_hitbox_area_body_entered"]
[connection signal="body_entered" from="VulnerableHurtArea" to="StateMachine/Vulnerable" method="_on_vulnerable_hit_area_body_entered"]
[connection signal="body_entered" from="MouthArea" to="StateMachine/Asleep" method="_on_mouth_area_body_entered"]
[connection signal="body_entered" from="MouthArea" to="StateMachine/Sucking" method="_on_mouth_area_body_entered"]
